--- a/src/Services/Discount/Discount.gRPC/appsettings.json
+++ b/src/Services/Discount/Discount.gRPC/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Database": "Data source=discountdb"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
