--- a/src/Services/Discount/Discount.gRPC/Discount.gRPC.csproj
+++ b/src/Services/Discount/Discount.gRPC/Discount.gRPC.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>9710a16b-9895-4f85-b500-4c6f18b6fbc5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
