Implement UpdateOrder command and handler

--- a/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -12,6 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Order\Commands\DeleteOrder\" />
 		<Folder Include="Order\EventHandlers\" />
 		<Folder Include="Order\Queries\" />
 	</ItemGroup>
