--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -35,7 +35,7 @@ services:
     container_name: orderdb
     environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=SwN12345678 
+      - MSSQL_SA_PASSWORD=SwN12345678 
     restart: always
     ports:
       - "1433:1433"
