Containerize yarp api gateway

--- a/src/ApiGateway/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateway/YarpApiGateway/YarpApiGateway.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>f1db1c72-f0c5-4dd4-8a65-9e6f9bed7a4f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
