Configure shopping.wen in  docker

--- a/src/WebApps/Shopping.Web/Shopping.Web.csproj
+++ b/src/WebApps/Shopping.Web/Shopping.Web.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>eac07965-5e79-47ec-bc89-7825122eb21f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
